exports[`CallNoteSaved should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {
        "backgroundColor": "rgba(246, 111, 63, 0.95)",
      },
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 24,
        "paddingRight": 24,
        "paddingTop": 14,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.7,
        }
      }>
      <Image
        source={1} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": undefined,
              "fontSize": 20,
              "paddingBottom": 10,
            },
          ]
        }>
        Call notes saved for:
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#fff",
              },
              Object {
                "fontSize": 24,
                "paddingBottom": 14,
              },
            ],
          ]
        }>
        Wed, Sep 28, 7:34 pm
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.3,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`CallNoteSaved should render with an activity 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {
        "backgroundColor": "rgba(246, 111, 63, 0.95)",
      },
    ]
  }>
  <View
    style={
      Array [
        Object {
          "height": 72,
          "justifyContent": "center",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {},
      ]
    }>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffbcbc",
            "borderColor": "red",
            "borderWidth": 1,
            "height": 100,
            "justifyContent": "center",
            "margin": 10,
            "width": 300,
          },
          undefined,
        ]
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#333333",
            "margin": 20,
          }
        }>
        TouchableNativeFeedback is not supported on this platform!
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 24,
        "paddingRight": 24,
        "paddingTop": 14,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.7,
        }
      }>
      <Image
        source={1} />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Object {
              "color": undefined,
              "fontSize": 20,
              "paddingBottom": 10,
            },
          ]
        }>
        Call notes saved for:
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#fff",
              },
              Object {
                "fontSize": 24,
                "paddingBottom": 14,
              },
            ],
          ]
        }>
        Wed, Sep 28, 7:34 pm
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#003035",
              "fontFamily": "Brandon Text",
              "fontSize": 13,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#fff",
              },
              Object {
                "fontSize": 24,
                "paddingBottom": 14,
              },
            ],
          ]
        }>
        Act III
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.3,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
